# Vulx

./: .gitignore  Cargo.toml  README.md  png.txt  window.txt
.github/workflows/: rust.yml
examples/: png.rs  triangle.rs  window.rs
examples/shader/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: device.rs  geometry.rs  image.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  renderpass.rs  shader.rs  shape.rs  stage.rs  types.rs
src/spv/: shader.vert.spv
