[package]
name = "Vulx"
version = "0.1.0"
edition = "2021"

[features]
default = ["window"]
window = ["ash-window"]
util = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.36", features = ["linked"] }
png = "0.17.11"
libc = "0.2.152"

nalgebra = "0.32.3"

num-traits = "0.2.17"

ash-window = { version = "0.9.1", optional = true }

[dev-dependencies]
winit = "0.29.10"
nalgebra-glm = "0.18.0"